--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,3 @@
-<!DOCTYPE html> 
-<html> 
-<head> <title>TEST HEADER</title> </head>
-<body> … </body> 
-</html> 
+<!DOCTYPE html> <html> <head> <title>TEST HEADER</title> </head><body> … </body> </html> 
  
  
