--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,3 @@
-<!DOCTYPE html> <html> <head> <title>TEST HEADER</title> </head><body> … </body> </html> 
+<!DOCTYPE html> <html>​​ <head> <title>​Page title​​</title> </head> <body>​​ … </body>  </html> 
  
  
