--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,12 @@
-<!DOCTYPE html> <html>​​ <head> <title>​Page title​​</title> </head> <body>​​ … </body>  </html> 
+<!DOCTYPE HTML>
+<html>
+<head> HEADER
+<title>TITLE</title>
+</head>
+ <body> 
+  BODY GOES HERE
+ </body>
+ </hmtl>
+
  
  
