--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<head> HEADER
-<title>TITLE</title>
+<head>
+<title>Title of the document</title>
 </head>
- <body> 
-  BODY GOES HERE
- </body>
- </hmtl>
 
- 
- 
+<body>
+The content of the document......
+</body>
+
+</html>
