--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <img src="/elitehackers/forgithub.jpg" alt="scary green code" width=200px />
 <head>
 <title>Title of the document</title>
 </head>
