--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 
 <body>
-<p>The content of the document......</p>
-   <img src="/elitehackers/forgithub.jpg" alt="scary green code" width=200px/>
+<p>Below is a button you should absolutely click......</p>
+   <p> <button type=Button" onclick="alert ( 'This is a pop up for inappropiate material!!')">Click me!</button> </p>
+   <img src="/elitehackers/forgithub.jpg" alt="scary green code" width=1600px/>
    
    <iframe width="560" height="315" src="https://www.youtube.com/embed/duQow41bTx0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <form>
@@ -38,7 +39,6 @@
          <option>More dumb colour names</option>
         </select> </p>
       
-     <p> <button type=Button" onclick="alert ( 'This is a pop up for inappropiate material!!')">Click me!</button> </p>
          
    </body>
    
