--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <p>Below is a button you should absolutely click......</p>
    <p> <button type=Button" onclick="alert ( 'This is a pop up for inappropiate material!!')">Click me!</button> </p>
-   <img src="/elitehackers/forgithub.jpg" alt="scary green code" width=1600px/>
+   <img src="/elitehackers/hackerman.jpg" alt="super hot hacker dude" width=200px/>
    
    <iframe width="560" height="315" src="https://www.youtube.com/embed/duQow41bTx0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <form>
