--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+   <link rel-'stylesheet' type='text/css'href='main.css'>
 <title>Test Webpages</title>
    <h1> Totally not a data stealing website </h1>
 </head>
